# ClipShelf

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release-dmg.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ClipList.vue  CodeEditor.vue  PreviewPane.vue  SidebarTabs.vue
src/data/: openxmlReference.ts
