[package]
name = "clipshelf"
version = "0.1.0"
description = "ClipShelf clipboard manager demo"
authors = ["Eiinu"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.9.5", features = [] }
